--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   font-family: "Oxygen", sans-serif;
 }
 
-/* HEADER */
+/* ********** BEGINNING OF HEADER ********** */
 
 #header-nav {
   background-color: #f6b319;
@@ -43,15 +43,52 @@ body {
   margin-bottom: 0;
   line-height: 0.75;
 }
-.navbar-brand a:hover, .navbar-brand a:focus {
+.navbar-brand a:hover, .navbar-brand a:focus { /* pas de souligné sous nom resto */
   text-decoration: none;
 }
-.navbar-brand p { /* Kosher cert */
+.navbar-brand p { /* Kosher certified */
   color: #000;
   text-transform: uppercase;
   font-size: 0.7em;
   margin-top: 15px;
 }
-.navbar-brand p span { /* Star-K */
+.navbar-brand p span { /* Kosher star-k-logo */
   vertical-align: middle;
 }
+
+#nav-list {
+  margin-top: 10px;
+}
+#nav-list a {
+  color: #951C49;
+  text-align: center;
+}
+#nav-list a:hover {
+  background: #E7E7E7;
+}
+#nav-list a span {
+  font-size: 1.8em;
+}
+
+#phone {
+  margin-top: 5px;
+}
+#phone a { /* Phone number */
+  text-align: right;
+  padding-bottom: 0;
+}
+#phone div { /* We Deliver */
+  color: #557c3e;
+  text-align: right;
+  padding-right: 15px;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #61122f;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+}
+
+/* ********** END OF HEADER ********** */
