--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,8 @@ body {
 
 
 
-/* ********** BEGIN BODY OF PAGE ********** */
+/* ********** BEGIN MAIN CONTENT OF PAGE ********** */
+
 /* Stylisation des images Jumbotron pour toutes les tailles d'écran */
 .container .jumbotron {
   box-shadow: 0 0 50px #3F0C1F;
@@ -144,9 +145,40 @@ et sur fond translucide grisé */
 }
 
 
+/* ****** BEGIN FOOTER ****** */
+.panel-footer { /* override this Bootstrap class to match our design */
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials {
+  font-style: italic;
+}
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
 
-/* *********** END BODY OF PAGE *********** */
+/* ******* END FOOTER ******* */
 
+
+
+/* *********** END MAIN CONTENT OF PAGE *********** */
 
 
 
